<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageButton
            android:src="@drawable/ic_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearTextButton"
            android:contentDescription="clear text"
            android:background="#0000"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

        <EditText
            android:id="@+id/newQuote"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/manual_quote_hint"
            android:layout_toLeftOf="@+id/clearTextButton"
            android:layout_toStartOf="@+id/clearTextButton"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/newSpeaker"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/manual_speaker_hint" />

    <AutoCompleteTextView
        android:id="@+id/addToListField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/add_to_list_hint_optional" />



</LinearLayout>
