<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_import_export"
            android:id="@+id/titleImportExport"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleImportExport"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="6dp"
            android:text=""
            />

        <TextView
            android:id="@+id/importExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startText"
            android:paddingLeft="40dp"
            android:paddingTop="6dp"
            android:text="@string/how_to_import"
            android:clickable="true"
            android:onClick="onHowToImport"
            android:textColor="#ff63b0df"/>

        <TextView
            android:id="@+id/exportExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="40dp"
            android:paddingTop="6dp"
            android:text="@string/how_to_export"
            android:clickable="true"
            android:onClick="onHowToExport"
            android:textColor="#ff63b0df"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_import"
            android:id="@+id/importButton"
            android:layout_below="@+id/exportExplain"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:onClick="onClickImport"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_export"
            android:id="@+id/exportButton"
            android:layout_below="@+id/exportExplain"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:onClick="onClickExport"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_below="@+id/importButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorText"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="#ffff8119"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/successText"
            android:layout_below="@+id/progressBar"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#ff12db23"
            android:visibility="invisible"/>

    </RelativeLayout>
</ScrollView>